--- a/public/styles.css
+++ b/public/styles.css
@@ -10,12 +10,20 @@
   align-self: flex-start;
 }
 
-#podcasts div {
+.podcast-element {
     background: aliceblue;
     border: thin solid white;
     padding: 2% 5%;
-    cursor: pointer;
+
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr; 
+    align-items: center;
 }
+
+.podcastText {
+ 
+}
+
 
 #podcasts div p{
     margin: 0;
@@ -34,12 +42,59 @@
 #nowPlaying {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 #nowPlaying audio{
     align-self: center; 
+    width: 100%;
 }
 
 #nowPlaying :last-child{
     font-size: 14px;
+}
+
+.play{
+  cursor: pointer;
+  
+  background: black;
+  height: 30px;
+  width: 30px;
+  clip-path: polygon(100% 50%, 0 0, 0 100%);
+}
+
+.add{
+  cursor: pointer;
+
+/*   text-align: right; */
+  font-weight: bold;
+  font-size: 40px;
+}
+
+#queue {
+  width: 100%;
+}
+
+
+#queue > div{
+  padding: 2px;
+  
+}
+
+#queue > :first-child {
+  border-bottom: solid black;
+}
+
+#queue > :not(:first-child) {
+  border-bottom: thin solid black;
+  margin: 1px;
+  cursor: pointer;
+  display: flex;
+  justify-content:space-between;
+  align-items: flex-start;
+}
+
+#queue > div > :last-child{
+  font-weight: 800;
+  margin-right: 2%;
 }
