--- a/public/player.css
+++ b/public/player.css
@@ -1,18 +1,8 @@
-:root{
-
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 #player {
+  padding: 10px 0px;
   place-content: center;
   font-family: sans-serif;
 }
-
 
 #controls {
   display: flex;
@@ -21,7 +11,7 @@ html, body {
 }
 
 #play{
-  border: thin solid black;
+  border: solid black;
   height: 4vh;
   width: 4vh;
   border-radius: 200px;
@@ -46,7 +36,39 @@ html, body {
   clip-path: none;
 }
 
+input[type="range"] {
+  -webkit-appearance: none;
+  margin-right: 15px;
+  width: 200px;
+  height: 7px;
+  background: rgb(250 0 0 / 60%);
+  border-radius: 5px;
+  background-image: linear-gradient(#ff4500, #ff4500);
+  background-size: 70% 100%;
+  background-repeat: no-repeat;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #03A9F4;
+  border: thin solid #86d9ff;
+  cursor: ew-resize;
+  box-shadow: 0 0 2px 0 #000;
+  transition: background .3s ease-in-out;
+}
+
+input[type=range]::-webkit-slider-runnable-track  {
+  -webkit-appearance: none;
+  box-shadow: none;
+  border: none;
+  background: #a5e3ff;
+}
+
 #seek {
+  margin: 4% 0;
   width: 100%;
 }
 
@@ -61,45 +83,24 @@ html, body {
   margin: 0;
 }
 
-#rewind-container, #fast-forward-container {
-
-}
-
-#rewind-container, #fast-forward-container, #seek, #play {
-  cursor: pointer;
-}
-
-#rewind-container :first-child{
- background: black;
- clip-path: polygon(50% 0, 50% 50%, 100% 0, 100% 100%, 50% 50%, 50% 100%, 0% 50%);
-}
-
-#fast-forward-container :last-child {
-  background: black;
-  clip-path: polygon(0 0, 50% 50%, 50% 0, 100% 50%, 50% 100%, 50% 50%, 0 100%);
-}
-
 #rewind, #fast-forward {
-  border: solid thin;
-  height: 2vh;
-  width: 2vh;
+  height: 4vh;
+  width: 4vh;
   font-size: 0.7em;
   font-family: sans-serif;
   font-weight: bold;
+  background: black;
 }
 
 #rewind{
   border-left: 0;
   margin-right: 1.5vh;
-
-  background: black;
   clip-path: polygon(50% 0, 50% 50%, 100% 0, 100% 100%, 50% 50%, 50% 100%, 0% 50%);
 }
 
 #fast-forward{
   border-right: 0;
   margin-left: 1.5vh;
-  background: black;
   clip-path: polygon(0 0, 50% 50%, 50% 0, 100% 50%, 50% 100%, 50% 50%, 0 100%);
 }
 
