--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,15 @@
+:root{
+
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 #main {
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,9 +45,9 @@
 }
 
 #search {
-    display: block;
+    font-size: 20px;
+    width: 100%;
     margin: 2%;
-    align-self: flex-start;
 }
 
 #nowPlaying {
@@ -45,15 +56,13 @@
     width: 100%;
 }
 
-#nowPlaying audio{
-    align-self: center;
-    width: 100%;
-}
 
 #nowPlaying :last-child{
     font-size: 14px;
 }
 
+
+/* podcast element buttons */
 .play{
   cursor: pointer;
 
@@ -65,8 +74,7 @@
 
 .add{
   cursor: pointer;
-
-/*   text-align: right; */
+  text-align: right;
   font-weight: bold;
   font-size: 40px;
 }
@@ -78,7 +86,6 @@
 
 #queue > div{
   padding: 2px;
-
 }
 
 #queue > :first-child {
