--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,6 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-
     font-family: sans-serif;
 }
 
@@ -117,4 +116,12 @@ html, body {
 
 .page-number-container > div:first-child {
   transform: rotate(0.5turn);
+}
+
+/* title */
+
+#title {
+  margin-bottom: 0;
+  text-align: center;
+  font-family: sans-serif;
 }
